fix UserImage vertical alignment

--- a/src/runtime/less/ts-tags.less
+++ b/src/runtime/less/ts-tags.less
@@ -229,6 +229,10 @@
 			}
 		}
 	}
+
+	.ts-userimage {
+		margin-top: -2px;
+	}
 }
 
 // Tags ........................................................................
